<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pk.edu.uaar.group_sports_club.sports_club.signUpActivity"
    android:orientation="vertical"
    android:background="@drawable/logo_lower">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="73dp"
        android:layout_height="82dp"
        android:src="@drawable/logo_main"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_label"
        android:fontFamily="@font/armata"
        android:textAlignment="center"
        android:textColor="#fa1505"
        android:textSize="26sp"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:background="@drawable/corner_background"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:inputType="text"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/average_sans"
                />
            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender1"
                android:textSize="15sp"
                android:textColor="#087011"
                android:onClick="genderClicked"/>
            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender2"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#087011"
                android:onClick="genderClicked"/>
        </RadioGroup>


        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <EditText
            android:id="@+id/cPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_next"
            android:textSize="15sp"
            android:backgroundTint="#5e17eb"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/btn_shift_login"
        android:textSize="14sp"
        android:textColor="@color/black"/>
</LinearLayout>