<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pk.edu.uaar.group_sports_club.sports_club.loginActivity"
    android:orientation="vertical"
    android:background="@drawable/logo_lower"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_test">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_main"
            android:contentDescription="@string/logo_description"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/armata"
            android:text="@string/signin_label"
            android:textAlignment="center"
            android:textColor="#fa1505"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:background="#e9dffd"
            android:textColor="#5e17eb"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="#5e17eb"
            android:padding="10dp"
            android:background="#e9dffd"
            android:textColorHint="#5e17eb"
            android:fontFamily="@font/average_sans"
            />

        <Button
            android:id="@+id/sbtBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#5e17eb"
            android:textColor="#fff"
            />

        <TextView
            android:id="@+id/signBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btn_shift_signup"
            android:textSize="14sp"
            android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>