<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pk.edu.uaar.group_sports_club.sports_club.signUp2"
    android:orientation="vertical"
    android:background="@drawable/logo_lower">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="73dp"
        android:layout_height="82dp"
        android:src="@drawable/logo_main"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup2_label"
        android:fontFamily="@font/armata"
        android:textAlignment="center"
        android:textColor="#fa1505"
        android:textSize="22sp"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:background="@drawable/corner_background"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/label_keeper"
                android:fontFamily="@font/average_sans"
                android:textColor="@color/black" />
            <RadioGroup
                android:id="@+id/Keeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yesKeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:textSize="15sp"
                    android:textColor="#087011"
                    android:onClick="keeperChecked"/>
                <RadioButton
                    android:id="@+id/noKeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:textSize="15sp"
                    android:textColor="#087011"
                    android:onClick="keeperChecked"/>
            </RadioGroup>

        </LinearLayout>

        <GridLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            >
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/label_batsman"
                android:fontFamily="@font/average_sans"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/Batsman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/leftBat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batsman1"
                    android:textSize="15sp"
                    android:textColor="#087011"
                    android:onClick="batsmanChecked"/>
                <RadioButton
                    android:id="@+id/rightBat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batsman2"
                    android:textSize="15sp"
                    android:textColor="#087011"
                    android:onClick="batsmanChecked"/>
            </RadioGroup>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/label_bowlerType"
                android:fontFamily="@font/average_sans"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/BowlerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/SpinBowler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bowlerSpin"
                    android:textSize="15sp"
                    android:textColor="#7a6816"
                    android:onClick="bowlerChecked"/>
                <RadioButton
                    android:id="@+id/FastBowler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bowlerFast"
                    android:textSize="15sp"
                    android:textColor="#7a6816"
                    android:onClick="bowlerChecked"/>
                <RadioButton
                    android:id="@+id/noneBowler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bowlerNo"
                    android:textSize="15sp"
                    android:textColor="#7a6816"
                    android:onClick="bowlerChecked"/>
            </RadioGroup>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/label_bowlerType"
                android:fontFamily="@font/average_sans"
                android:textColor="@color/black" />
            <RadioGroup
                android:id="@+id/BowlerHand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/leftHandBowler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bowlerSpin"
                    android:textSize="15sp"
                    android:textColor="#7a6816"
                    android:onClick="bowlerHand"/>
                <RadioButton
                    android:id="@+id/rightHandBowler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bowlerFast"
                    android:textSize="15sp"
                    android:textColor="#7a6816"
                    android:onClick="bowlerHand"/>
            </RadioGroup>
        </GridLayout>

    </LinearLayout>
    <Button
        android:id="@+id/sbtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_signup"
        android:textSize="15sp"
        android:backgroundTint="#5e17eb"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        />
</LinearLayout>